// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 1`] = `
"Incorrect

const getNothing: () => void = () => 2137;
                                     ~~~~ Value returned in \`getNothing\`, which is declared as a void function.
const getString: () => string = () => 'Hello';
const maybeString = Math.random() > 0.1 ? getNothing() : getString();
if (maybeString) console.log(maybeString.toUpperCase()); // ❌ Crash if getNothing was called
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 2`] = `
"Correct

const getNothing: () => void = () => {};
const getString: () => string = () => 'Hello';
const maybeString = Math.random() > 0.1 ? getNothing() : getString();
if (maybeString) console.log(maybeString.toUpperCase()); // ✅ No crash
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 3`] = `
"Incorrect

declare function takesCallback(cb: () => void): void;

takesCallback(async () => {
                       ~~ Async callback passed as an argument to \`takesCallback\`, which expects a void callback.
  const response = await fetch('https://api.example.com/');
  const data = await response.json();
  console.log(data);
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 4`] = `
"Correct

declare function takesCallback(cb: () => void): void;

takesCallback(() => {
  (async () => {
    const response = await fetch('https://api.example.com/');
    const data = await response.json();
    console.log(data);
  })().catch(console.error);
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 5`] = `
"Incorrect

declare function takesCallback(cb: () => void): void;

takesCallback(function* () {
              ~~~~~~~~~~ Value-returning callback passed as an argument to \`takesCallback\`, which expects a void callback.
  console.log('Hello');
  yield;
  console.log('World');
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 6`] = `
"Correct

declare function takesCallback(cb: () => void): void;

takesCallback(() => {
  function* gen() {
    console.log('Hello');
    yield;
    console.log('World');
  }
  for (const _ of gen());
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 7`] = `
"Incorrect

['Kazik', 'Zenek'].forEach(name => \`Hello, \${name}!\`);
                                   ~~~~~~~~~~~~~~~~~ Value returned in a callback argument to \`forEach\`, which expects a void callback.
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 8`] = `
"Correct

['Kazik', 'Zenek'].forEach(name => console.log(\`Hello, \${name}!\`));
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 9`] = `
"Incorrect

declare function takesCallback(cb: () => void): void;
declare function TakesCallback(props: { cb: () => void }): string;
declare let callback: () => void;
declare let returnsCallback: () => () => void;
declare let callbackObj: Record<string, () => void>;
declare let callbackArr: (() => void)[];

takesCallback(() => 'Hello');
                    ~~~~~~~ Value returned in a callback argument to \`takesCallback\`, which expects a void callback.
<TakesCallback cb={() => 'Hello'} />;
                         ~~~~~~~ Value returned in \`cb\` event handler prop of \`TakesCallback\`, which expects a void event handler.
callback = () => 'Hello';
                 ~~~~~~~ Value returned in \`callback\`, which is declared as a void function.
returnsCallback = () => {
  return () => 'Hello';
               ~~~~~~~ Value returned in a callback returned from a function, which must return a void callback.
};
callbackObj = {
  hello: () => 'Hello',
               ~~~~~~~ Value returned in \`hello\`, which is declared as a void function.
};
callbackArr = [() => 'Hello'];
                     ~~~~~~~ Value returned in a context where a void return is expected.
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 10`] = `
"Correct

declare function takesCallback(cb: () => void): void;
declare function TakesCallback(props: { cb: () => void }): string;
declare let callback: () => void;
declare let returnsCallback: () => () => void;
declare let callbackObj: Record<string, () => void>;
declare let callbackArr: (() => void)[];

takesCallback(() => console.log('Hello'));
<TakesCallback cb={() => console.log('Hello')} />;
callback = () => console.log('Hello');
returnsCallback = () => {
  return () => console.log('Hello');
};
callbackObj = {
  hello: () => console.log('Hello'),
};
callbackArr = [() => console.log('Hello')];
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 11`] = `
"Incorrect

/// <reference lib="dom" />

document.addEventListener('click', () => {
  return 'Clicked';
  ~~~~~~ Value returned in a callback argument to \`document.addEventListener\`, which expects a void callback.
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 12`] = `
"Correct

/// <reference lib="dom" />

document.addEventListener('click', () => {
  console.log('Clicked');
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 13`] = `
"Incorrect

class Foo {
  cb() {
    console.log('foo');
  }
}

class Bar extends Foo {
  cb() {
    super.cb();
    return 'bar';
    ~~~~~~ Value returned in \`cb\` method of \`Bar\`, whose base class \`Foo\` declares it as a void method.
  }
}
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 14`] = `
"Correct

class Foo {
  cb() {
    console.log('foo');
  }
}

class Bar extends Foo {
  cb() {
    super.cb();
    console.log('bar');
  }
}
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 15`] = `
"Incorrect

interface Foo {
  cb(): void;
}

class Bar implements Foo {
  cb() {
    return 'cb';
    ~~~~~~ Value returned in \`cb\` method of \`Bar\`, whose interface \`Foo\` declares it as a void method.
  }
}
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 16`] = `
"Correct

interface Foo {
  cb(): void;
}

class Bar implements Foo {
  cb() {
    console.log('cb');
  }
}
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 17`] = `
"Incorrect
Options: { "allowReturnPromiseIfTryCatch": false }

const cb: () => void = async () => {
                                ~~ Async function assigned to \`cb\`, which is declared as a void function.
  try {
    const response = await fetch('https://api.example.com/');
    const data = await response.json();
    console.log(data);
  } catch (error) {
    console.error(error);
  }
};
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 18`] = `
"Correct
Options: { "allowReturnPromiseIfTryCatch": false }

const cb: () => void = () => {
  (async () => {
    const response = await fetch('https://api.example.com/');
    const data = await response.json();
    console.log(data);
  })().catch(console.error);
};
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 19`] = `
"Incorrect
Options: { "allowReturnAny": false }

declare function fn(cb: () => void): void;

fn(() => JSON.parse('{}'));
         ~~~~~~~~~~~~~~~~ Value returned in a callback argument to \`fn\`, which expects a void callback.

fn(() => {
  return someUntypedApi();
  ~~~~~~ Value returned in a callback argument to \`fn\`, which expects a void callback.
});
"
`;

exports[`Validating rule docs strict-void-return.mdx code examples ESLint output 20`] = `
"Correct
Options: { "allowReturnAny": false }

declare function fn(cb: () => void): void;

fn(() => void JSON.parse('{}'));

fn(() => {
  someUntypedApi();
});
"
`;
